--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
     "fastify-plugin": "^4.4.0",
+    "gray-matter": "^4.0.3",
     "indieauth-helper": "^1.0.2",
     "microformats-parser": "^1.4.1",
-    "short-uuid": "^4.2.2"
+    "short-uuid": "^4.2.2",
+    "simple-git": "^3.15.1"
   }
 }
