--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@fastify/formbody": "^7.4.0",
     "@fastify/jwt": "^6.5.0",
     "@fastify/sensible": "^5.2.0",
+    "@fastify/static": "^6.6.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.11.0",
     "fastify-plugin": "^4.4.0",
