--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "fastify-plugin": "^4.4.0",
     "gray-matter": "^4.0.3",
     "indieauth-helper": "^1.0.2",
+    "isomorphic-git": "^1.21.0",
+    "memfs": "^3.4.13",
     "microformats-parser": "^1.4.1",
-    "short-uuid": "^4.2.2",
-    "simple-git": "^3.15.1"
+    "short-uuid": "^4.2.2"
   }
 }
